#cmake_minimum_required(VERSION 3.12)
#project(FacenetClassifier)
#
#set(CMAKE_CXX_STANDARD 17)
#add_executable(FacenetClassifier main.cpp classifier.h)
#include_directories(~/opt/opencv)
set(OpenCV_FOUND 1)
cmake_minimum_required(VERSION 2.8.4)
project(FacenetClassifier)
set(CMAKE_CXX_STANDARD 17)
find_package( OpenCV REQUIRED )
set(OpenCV_FOUND 1)
#set(SOURCE_FILES main.cpp)
include_directories("${PROJECT_SOURCE_DIR}/inc/")
add_executable(FacenetClassifier main.cpp classifier.h)
include_directories(/opt/opencv)
include_directories(/usr/local/lib)
target_link_libraries(FacenetClassifier ${OpenCV_LIBS})
