set(OpenCV_FOUND 1)
cmake_minimum_required(VERSION 2.8.4)
project(FacenetClassifier)
set(CMAKE_CXX_STANDARD 17)
find_package( OpenCV REQUIRED )
set(OpenCV_FOUND 1)
#set(SOURCE_FILES main.cpp)
include_directories("${PROJECT_SOURCE_DIR}/inc/")
add_executable(FacenetClassifier src/main.cpp src/classifier.h src/receiver.h)
include_directories(/opt/opencv)
include_directories(/usr/local/lib)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
target_link_libraries(FacenetClassifier ${OpenCV_LIBS})
